crates/num-variants/tests/fail/bad_attr.stderr
error: must be of the form #[num_variants = "FOO"]
 --> tests/fail/bad_attr.rs:4:1
  |
4 | #[num_variants = 123] // invalid (must be string)
  | ^
